# doptics

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  speed_tests.ipynb  test2.py  tox.ini
.github/workflows/: tests.yml
src/doptics/: functions.py  single_mirror.py  solver.py  symbolic.py  target.py  triangle_mesh.py  two_mirrors.py
src/doptics/doptics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/graphing/: grapher.py
src/ode_solving/: functions.py  solver.py  two_mirrors.py
src/ray/: ray.py
src/ray/raytracing/: raytracing.py  reflectors.npz
tests/: test_functions.py  test_ing.py  test_target.py  test_triangle_mesh.py  testing.py
