[metadata]
name = doptics
description = doptics - Differential Equation-based Optics Design Tool for Integrated Complex Systems
author = Philipp Landwehr and Santeri Röpelinen and Maddalena Zanrosso and Csaba Rosztoczy and Paulius Cebatarauskas
license = GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007
license_file = LICENSE
platforms = unix, linus, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = doptics
install_requires =
    pandas>=2
    numpy>=1
    icecream>=2
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160